--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700&display=swap" rel="stylesheet">    
     <script src="https://kit.fontawesome.com/b52ef34681.js" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <title>React App</title>
+    <title>Homework</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
